src/pages/common/components/infobar/Infobar/InfobarCustomerInfo/InfobarWidgets/widgets/customActions/ActionButtons/ActionButtons.less
:local {
    .editList {
        margin: 0 0 12px 0;
        padding: 0;
    }
    .editRow {
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin-bottom: 8px;
        padding: 0;
        button {
            overflow: hidden;
            text-overflow: ellipsis;
            background-color: var(--neutral-grey-0) !important;
        }
        &:hover .editIcons {
            display: inline;
        }
    }
    .editIcons {
        display: none;
        flex: 0 0 auto;
        font-size: 1.3rem;
        line-height: 1.3rem;
        i {
            padding: 0 4px;
            cursor: pointer;
        }
    }
    .addButton {
        width: 100%;
    }
    .formParamRow {
        display: flex;
        align-items: flex-start;
        margin-bottom: 0.7rem;
        :global .form-group {
            margin-bottom: 0;
        }
        & > div {
            flex: 1 1 auto;
            &:not(:last-of-type) {
                margin-right: 1.1rem;
            }
        }
        &.squash > div {
            &:not(:last-of-type) {
                margin-right: 0.6rem;
            }
        }
        .formParamLargeCol {
            flex: 1 1 80%;
        }
    }
    .formParamError {
        display: block !important;
        margin-bottom: 0.7rem;
    }
    .formParamGroupIcon {
        display: flex;
        flex: 0 0 auto !important;
    }
    .formParamIcon {
        font-size: 1.4rem !important;
    }
    .formParamCustomIcon {
        padding: 0 0.2rem;
        span {
            display: none;
        }
    }
    .actionButtons {
        display: flex !important;
        flex-wrap: nowrap !important;
    }
    .actionButton {
        overflow: hidden;
        text-overflow: ellipsis;
        flex: 1 0 auto;
    }
    .dropdownItem {
        max-width: 260px;
        overflow: hidden;
        text-overflow: ellipsis;
        font-size: 12px;
    }
}

